fix header on mobile

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ h3, h4 {
     position: relative;
     display: flex;
     flex-wrap: wrap;
-    margin: 15px 30px 0 30px;
+    margin: 15px 30px;
 }
 
 .logo {
@@ -213,5 +213,20 @@ h3, h4 {
     
     #menu-glowne-1 .current_page_item > a, #menu-glowne-1 > li > a:hover {
         color: #fff;
+    }
+}
+
+@media all and (max-width: 640px) {
+    .site-header {
+        margin: 15px;
+    }
+
+    #site-title {
+        font-size: 1.7em;
+        letter-spacing: 3px;
+    }
+
+    #show-nav {
+        margin: 10px 0;
     }
 }
